assets/css/style.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Chelsea Market', cursive;
}

body {
    background-image: url(../images/summer-5350229_1920.png);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
}

#main-header {
    text-align: center;
    padding: 3rem;
    font-size: 300%;
}

#rock {
    background-image: url(../images/rock-paper-scissors-296854.svg);
    }

#paper {
background-image: url(../images/rock-paper-scissors-296855.svg);
}

#scissors {
    background-image: url(../images/rock-paper-scissors-296853.svg);
    
}

button {
    height: 150px;
    width: 150px;
    border-radius: 5px;
    border-color: orange;
}

#three-buttons {
    padding: 2rem;
    position: relative;
    text-align: center;
}
#current-game-container {
    float: left;
    width: 30%;
    padding: 2rem;
}
#current-game-display {
    font-size: 150%;
    float: right;
}

#counter-container {
    float: right;
    width: 30%;
    padding: 2rem;
    font-family: 'Chelsea Market', cursive;
}

.header {
    text-align: center;
    padding-bottom: 1rem;
    font-size: 250%;
}

#counter-display {
    display: grid;
    grid-template-columns: auto auto;
    text-align: center;
    float: left;
    font-size: 150%;
    text-align: center;
}

.counter-name, .counter-score {
    border: 1px solid rgba(0, 0, 0, 0.8);
    padding: 2rem;
    text-align: center;
    width: 200px;
    background-color: rgba(255, 255, 255, 0.8)
}
.clear {
    clear: both;
}

